--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,32 @@
 {
-    "env": {
-      "browser": true,
-      "es2021": true
-    },
-    "extends": ["plugin:react/recommended", "airbnb", "prettier"],
-    "parserOptions": {
-      "ecmaFeatures": {
-        "jsx": true
-      },
-      "ecmaVersion": "latest",
-      "sourceType": "module"
-    },
-    "plugins": ["react"],
-    "rules": {
-    }
-  }
+	"env": {
+		"browser": true,
+		"es2021": true
+	},
+	"extends": [
+		"plugin:react/recommended",
+		"airbnb",
+		"prettier",
+		"plugin:prettier/recommended"
+	],
+	"parserOptions": {
+		"ecmaFeatures": {
+			"jsx": true
+		},
+		"ecmaVersion": "latest",
+		"sourceType": "module"
+	},
+	"plugins": ["react", "prettier"],
+	"settings": {
+		"react": {
+			"version": "detect"
+		}
+	},
+	"rules": {
+		"prettier/prettier": "error",
+		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+		"import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+		"no-console": "warn",
+		"no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }]
+	}
+}
