--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 		"@babel/core": "^7.26.0",
 		"@babel/preset-env": "^7.26.0",
 		"@babel/preset-react": "^7.26.3",
+		"@typescript-eslint/eslint-plugin": "^8.19.1",
+		"@typescript-eslint/parser": "^8.19.1",
 		"babel-loader": "^9.2.1",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -26,6 +28,7 @@
 		"globals": "^15.14.0",
 		"html-webpack-plugin": "^5.6.3",
 		"prettier": "3.4.2",
+		"typescript": "^5.7.3",
 		"typescript-eslint": "^8.19.1",
 		"webpack": "^5.97.1",
 		"webpack-cli": "^6.0.1",
