--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"build": "webpack .",
 		"lint": "eslint . --fix --max-warnings=0",
 		"format": "prettier . --write",
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "jest",
+		"coverage": "jest --coverage",
 		"prepare": "husky install"
 	},
 	"keywords": [],
@@ -19,24 +20,37 @@
 		"@babel/core": "^7.26.7",
 		"@babel/preset-env": "^7.26.7",
 		"@babel/preset-react": "^7.26.3",
+		"@testing-library/dom": "^10.4.0",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.2.0",
 		"@typescript-eslint/eslint-plugin": "^8.19.1",
 		"@typescript-eslint/parser": "^8.19.1",
 		"babel-loader": "^9.2.1",
+		"css-loader": "^7.1.2",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-jest": "^28.11.0",
 		"eslint-plugin-react": "^7.37.3",
 		"globals": "^15.14.0",
 		"html-webpack-plugin": "^5.6.3",
+		"identity-obj-proxy": "^3.0.0",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
 		"prettier": "3.4.2",
+		"style-loader": "^4.0.0",
 		"typescript": "^5.7.3",
 		"typescript-eslint": "^8.19.1",
+		"util": "^0.12.5",
 		"webpack": "^5.97.1",
 		"webpack-cli": "^6.0.1",
 		"webpack-dev-server": "^5.2.0"
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^6.7.2",
+		"axios": "^1.7.9",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"react-router-dom": "^7.1.3"
 	},
 	"lint-staged": {
 		"*.js": "eslint --cache --fix",
