--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,14 @@
 {
 	"env": {
 		"browser": true,
-		"es2021": true
+		"es2021": true,
+		"vitest/globals": true
 	},
 	"extends": [
+		"eslint:recommended",
 		"plugin:react/recommended",
 		"airbnb",
-		"prettier",
-		"plugin:prettier/recommended"
+		"plugin:vitest/recommended"
 	],
 	"parserOptions": {
 		"ecmaFeatures": {
@@ -16,18 +17,18 @@
 		"ecmaVersion": "latest",
 		"sourceType": "module"
 	},
-	"plugins": ["react", "prettier"],
-	"settings": {
-		"react": {
-			"version": "detect"
-		}
-	},
+	"plugins": ["react", "vitest"],
 	"rules": {
-		"prettier/prettier": "error",
-		"@typescript-eslint/no-require-imports": "off",
-		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-		"import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+		"react/react-in-jsx-scope": "off",
+		"react/prop-types": "off",
 		"no-console": "warn",
-		"no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }]
+		"no-unused-vars": "warn",
+		"quotes": ["error", "double"],
+		"semi": ["error", "always"],
+		"indent": ["error", 2],
+		"jsx-a11y/anchor-is-valid": "off",
+		"vitest/no-disabled-tests": "warn",
+		"vitest/no-focused-tests": "error",
+		"vitest/no-identical-title": "error"
 	}
 }
