--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
 		"start": "webpack-dev-server .",
 		"build": "webpack .",
 		"format": "prettier . --write",
-		"test": "jest",
-		"coverage": "jest --coverage",
+		"lint": "eslint \"src/**/*.js\" \"src/**/*.jsx\" --fix",
+		"test": "vitest",
+		"test:coverage": "vitest run --coverage",
 		"prepare": "husky install"
 	},
 	"keywords": [],
@@ -19,22 +20,28 @@
 		"@babel/core": "^7.26.7",
 		"@babel/preset-env": "^7.26.7",
 		"@babel/preset-react": "^7.26.3",
+		"@eslint/js": "^9.19.0",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.2.0",
 		"@typescript-eslint/eslint-plugin": "^8.19.1",
 		"@typescript-eslint/parser": "^8.19.1",
+		"@vitest/coverage-v8": "^3.0.4",
 		"babel-loader": "^9.2.1",
+		"c8": "^10.1.3",
 		"css-loader": "^7.1.2",
-		"eslint": "^9.18.0",
+		"eslint": "^9.19.0",
+		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-jest": "^28.11.0",
-		"eslint-plugin-react": "^7.37.3",
+		"eslint-plugin-import": "^2.31.0",
+		"eslint-plugin-jsx-a11y": "^6.10.2",
+		"eslint-plugin-react": "^7.37.4",
+		"eslint-plugin-vitest": "^0.5.4",
 		"globals": "^15.14.0",
 		"html-webpack-plugin": "^5.6.3",
+		"husky": "^9.1.7",
 		"identity-obj-proxy": "^3.0.0",
-		"jest": "^29.7.0",
-		"jest-environment-jsdom": "^29.7.0",
+		"jsdom": "^26.0.0",
 		"prettier": "3.4.2",
 		"style-loader": "^4.0.0",
 		"typescript": "^5.7.3",
@@ -46,14 +53,16 @@
 	},
 	"dependencies": {
 		"@fortawesome/fontawesome-svg-core": "^6.7.2",
+		"@testing-library/react-hooks": "^8.0.1",
 		"axios": "^1.7.9",
+		"chai": "^5.1.2",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"react-router-dom": "^7.1.3"
+		"react-router-dom": "^7.1.3",
+		"vitest": "^3.0.4"
 	},
 	"lint-staged": {
 		"*.js": "eslint --cache --fix",
-		"*.{js,css,md,html,json}": "prettier --cache --write",
-		"*.--write": "prettier --write"
+		"*.{js,css,md,html,json}": "prettier --cache --write"
 	}
 }
