--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"format": "prettier . --write",
 		"lint": "eslint \"src/**/*.js\" \"src/**/*.jsx\" --fix",
 		"test": "vitest",
-		"test:coverage": "vitest run --coverage",
+		"test:coverage": "c8 vitest",
 		"prepare": "husky install"
 	},
 	"keywords": [],
@@ -27,6 +27,8 @@
 		"@typescript-eslint/eslint-plugin": "^8.19.1",
 		"@typescript-eslint/parser": "^8.19.1",
 		"@vitest/coverage-v8": "^3.0.4",
+		"ajv": "^8.17.1",
+		"ajv-keywords": "^5.1.0",
 		"babel-loader": "^9.2.1",
 		"c8": "^10.1.3",
 		"css-loader": "^7.1.2",
@@ -47,6 +49,7 @@
 		"typescript": "^5.7.3",
 		"typescript-eslint": "^8.19.1",
 		"util": "^0.12.5",
+		"vitest": "^3.0.4",
 		"webpack": "^5.97.1",
 		"webpack-cli": "^6.0.1",
 		"webpack-dev-server": "^5.2.0"
@@ -58,8 +61,7 @@
 		"chai": "^5.1.2",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"react-router-dom": "^7.1.3",
-		"vitest": "^3.0.4"
+		"react-router-dom": "^7.1.3"
 	},
 	"lint-staged": {
 		"*.js": "eslint --cache --fix",
